--- a/vars/pong/default.yml
+++ b/vars/pong/default.yml
@@ -1,2 +1,1 @@
-pong_command_download_url:
-  https://github.com/kurehajime/pong-command/releases/download/1.1/linux_amd64.zip
+pong_command_download_url: https://github.com/kurehajime/pong-command/releases/download/1.1/linux_amd64.zip
