--- a/roles/pong/tasks/main.yml
+++ b/roles/pong/tasks/main.yml
@@ -1,11 +1,8 @@
-- name: check if pong command exits
+- name: check if pong command exists
   command: test -f /usr/local/bin/pong
   register: 
-    CHECK_EXITS
+    CHECK_EXISTS
   ignore_errors: yes
-
-- debug: 
-    var: CHECK_EXITS
 
 - name: install unzip with yum
   become: yes
@@ -13,7 +10,7 @@
     name: unzip
     state: present
   when:
-    CHECK_EXITS.rc == 1
+    CHECK_EXISTS.rc == 1
 
 - name: download pong-command.zip from github.com 
   become: yes
@@ -21,7 +18,7 @@
     url: '{{ pong_command_download_url }}' 
     dest: /tmp
   when:
-    CHECK_EXITS.rc == 1
+    CHECK_EXISTS.rc == 1
 
 - name: unzip pong-command.zip
   become: yes
@@ -29,7 +26,7 @@
     src: /tmp/linux_amd64.zip
     dest: /tmp
   when:
-    CHECK_EXITS.rc == 1
+    CHECK_EXISTS.rc == 1
 
 - name: install pong-command
   become: yes
@@ -37,4 +34,4 @@
   args:
     chdir: /tmp
   when:
-    CHECK_EXITS.rc == 1
+    CHECK_EXISTS.rc == 1
