--- a/roles/ruby/install/source/tasks/main.yml
+++ b/roles/ruby/install/source/tasks/main.yml
@@ -1,13 +1,13 @@
 - name: delete working directory [/tmp/ruby]
   become: yes
   file:
-    path: /tmp/ruby
+    path: '{{ work_dir }}' 
     state: absent
 
 - name: make working directory [/tmp/ruby]
   become: yes
   file:
-    path: /tmp/ruby
+    path: '{{ work_dir }}'
     state: directory
     mode: 0755
 
@@ -40,7 +40,7 @@
 
 - name: test if ruby is downloaded
   command:
-    test -f {{ work_dir }}/{{ ruby_archive_version }}
+    test -f "{{ work_dir }}{{ ruby_archive_version }}"
   register:
     ruby_src_test_vars
   failed_when:
