--- a/roles/lolcat/tasks/main.yml
+++ b/roles/lolcat/tasks/main.yml
@@ -8,6 +8,6 @@
   become: yes
   command: gem install lolcat
   environment:
-    PATH: '{{ ansible_env.PATH }}'
+    PATH: "/usr/local/bin:{{ ansible_env.PATH }}"
   when:
     CHECK_LOLCAT_EXISTS.rc not in [0, 1]
