--- a/vars/nyancat/default.yml
+++ b/vars/nyancat/default.yml
@@ -2,4 +2,4 @@ nyancat_download_url: https://github.com/klange/nyancat/archive/master.zip
 
 nyancat_archive_file: nyancat-master.zip
 
-nyancat_dir: nyancat
+nyancat_dir: nyancat-master
